
version 0.9.18:
	* Logging in works better for oscar
	* Double error bug when sending message to an offline user is
	  fixed.
	* Pressing enter once again sends a message in buddy chatrooms (oops)
	* More fixes for the change on the AOL sign-on process. 
	* Fixed bug where GAIM sometimes doesn't find a font to use.
	* Per-conversation font and color dialogs (thanks fflewddur)

version 0.9.17 (05/31/2000):
	* Automagic feature to check for new versions has been removed
	* Infinite loop bug fixed

version 0.9.16: (05/31/2000)
	* Paned buddy chat window (Thanks Syd)
	* Buddy lists (and changes) are cached to ~/.gaim/<sn>.blist
	  where <sn> is your screen name. If for some reason, you log
          into the AOL server and the buddy list comes back empty, we
	  check for a cache file, and, if we find one, read it in. This
          essentially implements recovery from a server crash at AOL
	  (AOL does not back up machines that contain TOC-based buddy
	  lists, unfortunately).  (Thanks Syd)
	* Font selection dialog 
	* Small changes to the Oscar/libfaim stuff (see libfaim/README.gaim)
	* SOCKS v4 Proxy support
	* Better proxy support overall (you can get people's info now! :) )
	* Two-way file transfer (you can get and send files, but you still
	  can't initiate either)
	* Fixed font problem with Misconfigured X-Servers.  Thanks Decklin!
	* Fixed the No Configuration problem that came about today (5/31)

version 0.9.15: (05/06/2000)
	* Plugin support enabled by default (oops)
	* Some plugins built/installed by default
	* Option to automagically check for new releases
	* Ability to receive files (one-way file transfer)
	* In-line spell checker (thanks to Torrey Searle of the
	  Everybuddy Devel team for this one)

version 0.9.14:
	* Numerous Fixes by G. Sumner Hayes (buffer over flow patches,
	  etc)
	* Paned Conversation Windows (Thanks Syd)
	* Raise Window On Message Received, Fixed (Thanks Syd)
	* When multiple screen names, Gaim now correctly remembers the name